form submit disabled, media tablet adjusted for 640px, menu cross position on mobile fixed

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -24,6 +24,8 @@
     @include top-actions;
     margin-bottom: 44px;
 
+    grid-template-columns: 1fr $icon-width;
+
     @include onTablet {
       grid-template-columns: 1fr $icon-width;
     }
